--- a/debian/control.in
+++ b/debian/control.in
@@ -8,5 +8,7 @@ Standards-Version: 3.7.2
 Package: debathena-quota-config
 Architecture: all
 Depends: debathena-quota (>= 9.4.0-0debathena2~), ${misc:Depends}
+Provides: ${diverted-files}
+Conflicts: ${diverted-files}
 Description: Set Athena quota as default
  This package makes /usr/bin/quota point to the Debian-Athena version.
