--- a/debian/rules
+++ b/debian/rules
@@ -1,8 +1,10 @@
 #!/usr/bin/make -f
 
 DEB_AUTO_UPDATE_DEBIAN_CONTROL = 1
-DEBATHENA_DIVERT_FILES_debathena-quota-config += \
+DEB_DIVERT_EXTENSION = .debathena
+DEB_DIVERT_FILES_debathena-quota-config += \
 	/usr/bin/quota.debathena \
 	/usr/share/man/man1/quota.debathena.1.gz
 include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/rules/debathena-divert.mk
+include /usr/share/cdbs/1/rules/replace-files.mk
+
