--- a/debian/control.in
+++ b/debian/control.in
@@ -1,7 +1,7 @@
 Source: debathena-quota-config
 Section: debathena-config/utils
 Priority: extra
-Maintainer: Debian-Athena Project <debathena@mit.edu>
+Maintainer: Debathena Project <debathena@mit.edu>
 Build-Depends: @cdbs@
 Standards-Version: 3.7.2
 
@@ -11,4 +11,4 @@ Depends: debathena-quota (>= 9.4.0-0debathena2~), ${misc:Depends}
 Provides: ${diverted-files}
 Conflicts: ${diverted-files}
 Description: Set Athena quota as default
- This package makes /usr/bin/quota point to the Debian-Athena version.
+ This package makes /usr/bin/quota point to the Debathena version.
